Fix overflow

--- a/app/assets/styles/base/_core.scss
+++ b/app/assets/styles/base/_core.scss
@@ -1,6 +1,13 @@
 * {
     max-width: 100vw;
     box-sizing: border-box;
+}
+
+html, body {
+    overflow-x: hidden;
+}
+
+main, section, div:not(.header__headband):not(.header__container) {
     overflow-x: hidden;
 }
 
